# parallel-computation

Lab1 - Parallel Differentiation/: .gitignore  CMakeLists.txt  main.cc  pi.cc  time.cc
Lab1 - Parallel Differentiation/include/: drawer.hh  grid.hh  plot.hh  scheme.hh  solver.hh
Lab1 - Parallel Differentiation/src/: drawer.cc  plot.cc  scheme.cc  solver.cc
Lab2 - Parallel Integration/: CMakeLists.txt  main.cc  par.cc  par.hh  seq.cc  seq.hh  task.hh
Lab3 - OpenMP Introduction/: CMakeLists.txt  main.cc
Lab3 - OpenMP Introduction/include/matrix/: matrix.hh
